Fixed imports in scripts.

--- a/06_scripts.ipynb
+++ b/06_scripts.ipynb
@@ -63,7 +63,8 @@
     "import time\n",
     "\n",
     "from pygengraph.graph import GenomeGraph\n",
-    "from pygengraph.export import exportProject"
+    "from pygengraph.export import exportProject\n",
+    "from pygengraph.utils import pathFileToPathDict"
    ]
   },
   {
