Fixed v1/v2 confusion in paths2graph.

--- a/06_scripts.ipynb
+++ b/06_scripts.ipynb
@@ -231,7 +231,7 @@
     "        # For v1\n",
     "        for seqName,pathfile in params['pathFiles'].items(): \n",
     "\n",
-    "            paths = pathFileToPathDict(f'{pathfileDir}{os.path.sep}{pathfile}',directional,sort_acc)\n",
+    "            paths = pathFileToPathDict(f'{pathfileDir}{os.path.sep}{pathfile}',directional,sort_acc, False)\n",
     "\n",
     "            # paths = {}\n",
     "            # for accession in sorted(list(_paths.keys())):\n",
@@ -260,7 +260,7 @@
     "\n",
     "        pathsfile = f'paths.txt'\n",
     "\n",
-    "        paths = pathFileToPathDict(f'{pathfileDir}{os.path.sep}{params[\"pathFile\"]}',directional,sort_acc,True)\n",
+    "        paths = pathFileToPathDict(f'{pathfileDir}{os.path.sep}{params[\"pathFile\"]}', directional,sort_acc, True)\n",
     "\n",
     "        for seqNum in paths.keys():#range(1,6): \n",
     "            # paths = {}\n",
