Removed deprecated np.int and np.bool

--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -113,7 +113,7 @@
     "    print('Calculating nodes length...')\n",
     "    \n",
     "    numNodes = len(graph.nodes)\n",
-    "    numNodesDigits = np.int(np.ceil(np.log10(numNodes)))\n",
+    "    numNodesDigits = int(np.ceil(np.log10(numNodes)))\n",
     "    nodeLengths = [0]*numNodes\n",
     "    \n",
     "    for nodeIdx in range(numNodes):\n",
@@ -199,14 +199,14 @@
     "    print('Preprocessing paths...')\n",
     "    \n",
     "    numPaths = len(graph.paths)\n",
-    "    numPathsZeros = np.int(np.ceil(np.log10(numPaths)))\n",
+    "    numPathsZeros = int(np.ceil(np.log10(numPaths)))\n",
     "    \n",
     "    maxLengthPath = len(max(graph.paths,key=lambda arr: len(arr)))\n",
     "\n",
     "    pathLengths = []\n",
-    "    pathNodeArray = np.zeros((len(graph.paths),maxLengthPath),dtype = np.int)\n",
-    "    pathNodeLengths = np.zeros((len(graph.paths),maxLengthPath),dtype = np.int)\n",
-    "    pathDirArray = np.zeros((len(graph.paths),maxLengthPath),dtype = np.bool) # True - \"+\", False - \"-\" or padding for shorter paths.\n",
+    "    pathNodeArray = np.zeros((len(graph.paths),maxLengthPath),dtype = int)\n",
+    "    pathNodeLengths = np.zeros((len(graph.paths),maxLengthPath),dtype = int)\n",
+    "    pathDirArray = np.zeros((len(graph.paths),maxLengthPath),dtype = bool) # True - \"+\", False - \"-\" or padding for shorter paths.\n",
     "\n",
     "    for i,path in enumerate(graph.paths):\n",
     "        print(f'\\rProcessing path {i+1:0{numPathsZeros}}/{numPaths:0{numPathsZeros}}',end='')\n",
