--- a/04_utils.ipynb
+++ b/04_utils.ipynb
@@ -334,7 +334,7 @@
     "    '''\n",
     "    _zoomLevels = np.array(zoomLevels)\n",
     "    div = _zoomLevels[1:]/_zoomLevels[:-1]\n",
-    "    return not np.any(div - div.astype(np.int))"
+    "    return not np.any(div - div.astype(int))"
    ]
   },
   {
