--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -775,7 +775,7 @@
     "    component = deepcopy(componentTemplate)\n",
     "    \n",
     "    numNodes = len(graph.nodes)\n",
-    "    numNodesDigits = np.int(np.ceil(np.log10(numNodes)))\n",
+    "    numNodesDigits = int(np.ceil(np.log10(numNodes)))\n",
     "    \n",
     "    fromLinks = {}\n",
     "    toLinks = {}\n",
@@ -1386,7 +1386,7 @@
     "                         linkLengths=None,pairedLinks=None,interconnectedLinks=None,blockEdges=None,\n",
     "                         debug=False):\n",
     "    numComps = len(components)\n",
-    "    numCompsDigits = np.int(np.ceil(np.log10(numComps)))\n",
+    "    numCompsDigits = int(np.ceil(np.log10(numComps)))\n",
     "    \n",
     "    for compNum in range(numComps):\n",
     "        if debug:    \n",
@@ -3105,7 +3105,7 @@
     "    print('===========================')\n",
     "    \n",
     "    numComponents = len(components)\n",
-    "    numComponentsDigits = np.int(np.ceil(np.log10(numComponents)))\n",
+    "    numComponentsDigits = int(np.ceil(np.log10(numComponents)))\n",
     "    \n",
     "    newComponent = deepcopy(componentTemplate)\n",
     "    newComponents = []\n",
@@ -4403,7 +4403,7 @@
     "    nucleotides = ''\n",
     "    nBins = 0\n",
     "    numComps = len(components)\n",
-    "    numCompsDigits = np.int(np.ceil(np.log10(numComps)))\n",
+    "    numCompsDigits = int(np.ceil(np.log10(numComps)))\n",
     "    \n",
     "    if redisConn:\n",
     "        accessions = rootStruct[\"pathNames\"]\n",
