Fixed a bug with wrong name of variable; some help typos.

--- a/06_scripts.ipynb
+++ b/06_scripts.ipynb
@@ -106,9 +106,9 @@
     "    \n",
     "    sortgraph_parser = subparsers.add_parser('sort-graph',help='Perform graph sorting to get preferred order of nodes for linearised visualisation.')\n",
     "    \n",
-    "    sortgraph_parser.add_argument('--quiet','-q',action='store_true', help='Suppress most of output. False (i.e. verbose) is not set.')\n",
+    "    sortgraph_parser.add_argument('--quiet','-q',action='store_true', help='Suppress most of output. False (i.e. verbose) if not set.')\n",
     "    \n",
-    "    sortgraph_parser.add_argument('--isseq','-s',action='store_true', help='Does this graph contains nucleotide sequences. False is not set.')\n",
+    "    sortgraph_parser.add_argument('--isseq','-s',action='store_true', help='Does this graph contains nucleotide sequences. False if not set.')\n",
     "    \n",
     "    sortgraph_parser.add_argument('--output','-o', action='store', help='File path where to save sorted graph. If not set, the input will be overwritten.')\n",
     "    \n",
@@ -466,7 +466,7 @@
     "    inputfile = args.input\n",
     "    \n",
     "    vargs = vars(args)\n",
-    "    isseq = args.get('isseq',False)\n",
+    "    isseq = vargs.get('isseq',False)\n",
     "    \n",
     "    outputfile = vargs.get('output', inputfile)\n",
     "    \n",
