Issue with case when redisHost is not passed (None).

--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -4961,7 +4961,10 @@
     "        print()\n",
     "        print(f'Processing case {outputName}')\n",
     "        if redisHost is not None:\n",
-    "            redisConn = Redis(host = redisHost, port = redisPort, db=0)\n",
+    "            print(f'Using Redis DB server at {redisHost}:{redisPort} with db number {redisDB}.')\n",
+    "            redisConn = Redis(host = redisHost, port = redisPort, db=redisDB)\n",
+    "        else:\n",
+    "            redisConn = None\n",
     "\n",
     "        startTime = time.time()\n",
     "        exportToPantograph(inputPath=coreGFApath, GenomeGraphParams={}, \n",
