--- a/06_scripts.ipynb
+++ b/06_scripts.ipynb
@@ -493,8 +493,6 @@
     "    if 'file' not in vars(args):\n",
     "        raise AttributeError('Positional argument with path to setting YAML file has to be provided.')\n",
     "    \n",
-    "    print(args)\n",
-    "    \n",
     "    if args.generate:\n",
     "        defaultYAML = \"\"\"\\\n",
     "###############################################################################\n",
@@ -550,16 +548,16 @@
     "# maxLengthChunk defined how many components will be recorded into a single file in the visualisation data structure. Smaller chunk files allows to\n",
     "# load data into memory more precisely, but if a lot of small components should be loaded, larger chunks make it quicker.\n",
     "# If not set, default of 6 will be used.\n",
-    "# maxLengthChunk: 6,\n",
+    "# maxLengthChunk: 6\n",
     "\n",
     "# Each cell has calculated inversion ratio (see user manual for details). It will be shown as inverted (shades of red) if its inversion ratio\n",
     "# is more than `inversionThreshold` set\n",
     "# If not set, default is 0.5\n",
-    "# inversionThreshold: 0.5,\n",
+    "# inversionThreshold: 0.5\n",
     "\n",
     "# If the graph is not nucleotide graph (e.g. gene graph generated from paths or annotations), `isSeq` should be set to False.\n",
     "# Default is True\n",
-    "# isSeq: False,\n",
+    "# isSeq: False\n",
     "\n",
     "# Which zoom levels should be generated. The number indicate how many maximum nucleotides (or genes in case of gene graph) can be displayed as\n",
     "# single column in the visualised matrix. Zoom level of 1 is added automatically if it is not in the list. Each previous zoom level should be \n",
@@ -581,6 +579,9 @@
     "    \n",
     "    with open(args.file,'r') as f:\n",
     "        params = yaml.load(f,Loader=yaml.Loader)\n",
+    "        \n",
+    "    print('DEBUG!')\n",
+    "    print(params)\n",
     "    exportProject(**params)\n",
     "    "
    ]
