Changed default for isseq in exportproject from False to True.

--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -4858,7 +4858,7 @@
     "                  suffix = '',\n",
     "                  maxLengthComponent = 100, maxLengthChunk = 6,\n",
     "                  inversionThreshold = 0.5,\n",
-    "                  isSeq = False,\n",
+    "                  isSeq = True,\n",
     "                  zoomLevels = [1], fillZoomLevel = True):\n",
     "    '''\n",
     "    This is the only function that should normally be used to export a set of graphs (e.g. a graph per chromosome)\n",
