--- a/00_init.ipynb
+++ b/00_init.ipynb
@@ -9,6 +9,7 @@
     "  annotation (and actual sequences).\n",
     "output-file: init.html\n",
     "title: Init module\n",
+    "draft: true\n",
     "\n",
     "---\n",
     "\n"
@@ -33,6 +34,13 @@
     "from nbdev import nbdev_export\n",
     "nbdev_export()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
