--- a/06_scripts.ipynb
+++ b/06_scripts.ipynb
@@ -9,7 +9,7 @@
     "description: all functions to run command line interface\n",
     "output-file: scripts.html\n",
     "title: Script module\n",
-    "\n",
+    "draft: true\n",
     "---\n",
     "\n"
    ]
