--- a/deBruijnGraphProcessing.ipynb
+++ b/deBruijnGraphProcessing.ipynb
@@ -8,7 +8,7 @@
     "---\n",
     "output-file: debruijngraphprocessing.html\n",
     "title: Processing GFA produced by CuttleFish compacted de Bruijn graph constructor\n",
-    "\n",
+    "draft: true\n",
     "---\n",
     "\n"
    ]
