--- a/index.ipynb
+++ b/index.ipynb
@@ -69,6 +69,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use command line interface `pantograph`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After this package is installed, a command line tool `pantograph` becomes available.\n",
+    "\n",
+    "It has several functions as following"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Converting annotations to gene graph (see user manual on what is gene graph)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is done by a command \n",
+    "```bash\n",
+    "$ pantograph annotation2graph [-h] [-g] setting_file.yaml\n",
+    "```\n",
+    "\n",
+    "It requires a path to a yaml file with all settings for the process. If used with `-g` option, then a sample file will be generated for you to edit and then run it.\n",
+    "Sample file has extensive comments explaining every parameter.\n",
+    "\n",
+    "So, it is best to do the following:\n",
+    "\n",
+    "```bash\n",
+    "$ pantograph annotation2graph -g setting.yaml\n",
+    "```\n",
+    "\n",
+    "then, using your favourite text editor, edit the generated file and then run\n",
+    "\n",
+    "```bash\n",
+    "$ pantograph annotation2graph setting.yaml\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Converting a file(s) with paths into gene/block graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is done by a command \n",
+    "```bash\n",
+    "$ pantograph paths2graph [-h] [-g] setting_file.yaml\n",
+    "```\n",
+    "\n",
+    "It requires a path to a yaml file with all settings for the process. If used with `-g` option, then a sample file will be generated for you to edit and then run it.\n",
+    "Sample file has extensive comments explaining every parameter.\n",
+    "\n",
+    "So, it is best to do the following:\n",
+    "\n",
+    "```bash\n",
+    "$ pantograph paths2graph -g setting.yaml\n",
+    "```\n",
+    "\n",
+    "then, using your favourite text editor, edit the generated file and then run\n",
+    "\n",
+    "```bash\n",
+    "$ pantograph paths2graph setting.yaml\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sorting a graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to sort a graph, it should be in GFA v1 format file. To run the sorting, you need to use the following command:\n",
+    "\n",
+    "```bash\n",
+    "$ pantograph sort-graph [-h] [--quiet] [--isseq] [--output OUTPUT] input\n",
+    "```\n",
+    "with the following parameters\n",
+    "\n",
+    "positional arguments:\n",
+    "\n",
+    "`input`                 Relative (to current directory) or absolute path to the GFA file with the graph to be sorted.\n",
+    "\n",
+    "optional arguments:\n",
+    "\n",
+    "`-h`, `--help`            show this help message and exit\n",
+    "\n",
+    "`--quiet`, `-q`           Suppress most of output. False (i.e. verbose) is not set.\n",
+    "\n",
+    "`--isseq`, `-s`           Does this graph contains nucleotide sequences. False is not set.\n",
+    "\n",
+    "`--output OUTPUT`, `-o OUTPUT`\n",
+    "                        File path where to save sorted graph. If not set, the input will be overwritten."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exporting graph into visualisation data structure, which can be used by Pantograph visualisation tool."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is done by a command \n",
+    "```bash\n",
+    "$ pantograph export-vis [-h] [-g] setting_file.yaml\n",
+    "```\n",
+    "\n",
+    "It requires a path to a yaml file with all settings for the process. If used with `-g` option, then a sample file will be generated for you to edit and then run it.\n",
+    "Sample file has extensive comments explaining every parameter.\n",
+    "\n",
+    "So, it is best to do the following:\n",
+    "\n",
+    "```bash\n",
+    "$ pantograph export-vis -g setting.yaml\n",
+    "```\n",
+    "\n",
+    "then, using your favourite text editor, edit the generated file and then run\n",
+    "\n",
+    "```bash\n",
+    "$ pantograph export-vis setting.yaml\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use python package"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The rest of the file describes some of the uses of the pyGenGraph package. There are more ways to use it, but more detailed documentation is needed to describe all use cases.\n",
+    "Also, more things required for this package to become really universal."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
