Added printing type of graph being exported.

--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -4978,7 +4978,12 @@
     "                                        inversionThreshold=inversionThreshold)\n",
     "        runTime = time.time() - startTime\n",
     "\n",
-    "        print(f'Exporting gene graph for {seqID} took {runTime} seconds')\n",
+    "        if isSeq:\n",
+    "            gtype = 'nucleotide'\n",
+    "        else:\n",
+    "            gtype = 'gene'\n",
+    "            \n",
+    "        print(f'Exporting {gtype} graph for {seqID} took {runTime} seconds')\n",
     "    \n",
     "    redisConn.close()\n",
     "    \n",
