Update to documentation

--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "#| include: false\n",
     "%load_ext autoreload\n",
@@ -726,6 +735,7 @@
      "text": [
       "\n",
       "Processing case tutorial_graph_Main\n",
+      "Using Redis DB server at redis:6379 with db number 0.\n",
       "Loading Genome\n",
       "Loading graph from examples/nucleotide_graph/paths_presentation_ordered.gfa\n",
       "Found nodeNames file examples/nucleotide_graph/nodeNames_paths_presentation_ordered.json, loading names.\n",
@@ -864,7 +874,7 @@
       "\n",
       "Recording component 6/6\n",
       "Recording zoom level 64 finished.\n",
-      "Exporting gene graph for Main took 0.5284504890441895 seconds\n"
+      "Exporting gene graph for Main took 0.5401127338409424 seconds\n"
      ]
     }
    ],
@@ -945,7 +955,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'adjustZoomLevels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m invertionThreshold \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.5\u001b[39m\n\u001b[1;32m      6\u001b[0m zoomLevels \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m9\u001b[39m]\n\u001b[0;32m----> 7\u001b[0m zoomLevels \u001b[38;5;241m=\u001b[39m \u001b[43madjustZoomLevels\u001b[49m(zoomLevels)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m seqNum \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m6\u001b[39m):\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m doCreateCoreGenes:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'adjustZoomLevels' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "pathfileDir = '../../1001G/coreGraph/new_Nov2022'\n",
@@ -1061,6 +1083,13 @@
     "                       maxLengthComponent=maxLengthComponent,\n",
     "                       inversionThreshold=inversionThreshold,)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
