Added changing of umask for correct work in docker

--- a/03_synteny.ipynb
+++ b/03_synteny.ipynb
@@ -52,6 +52,9 @@
    "outputs": [],
    "source": [
     "#| exporti\n",
+    "import os\n",
+    "os.umask(0)\n",
+    "\n",
     "import time\n",
     "\n",
     "import pandas as pd\n",
