--- a/01_graph.ipynb
+++ b/01_graph.ipynb
@@ -61,6 +61,8 @@
     "#| exporti\n",
     "\n",
     "import os\n",
+    "os.umask(0)\n",
+    "\n",
     "import json\n",
     "import itertools\n",
     "import warnings\n",
