--- a/05_export.ipynb
+++ b/05_export.ipynb
@@ -66,6 +66,8 @@
     "#| exporti\n",
     "\n",
     "import os\n",
+    "os.umask(0)\n",
+    "\n",
     "import json\n",
     "import time\n",
     "import itertools\n",
