--- a/06_scripts.ipynb
+++ b/06_scripts.ipynb
@@ -60,6 +60,8 @@
     "import argparse\n",
     "import yaml\n",
     "import os\n",
+    "os.umask(0)\n",
+    "\n",
     "import time\n",
     "\n",
     "from pygengraph.graph import GenomeGraph\n",
