Modified documentation, updated links.

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`pip install -e .`"
+    "`pip install -e .[dev]`"
    ]
   },
   {
